--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Portal TechLearn</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="styleindex.css">
         <meta name="viewport" content="width=device-width , initial-scale=1.0">
     </head>
     <body>
